--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,14 @@ dj-database-url==0.5.0
 Django==3.2.4
 django-bootstrap3==15.0.0
 django-bootstrap4==3.0.1
+django-braces==1.14.0
 django-heroku==0.3.1
+django-model-utils==4.1.1
 django-registration==3.1.1
+django-star-ratings==0.9.1
 django-tinymce==3.3.0
 django-vote==2.2.0
+djangorestframework==3.12.4
 gunicorn==20.1.0
 Pillow==8.2.0
 psycopg2==2.9.1
@@ -21,5 +25,6 @@ pytz==2021.1
 six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
+swapper==1.1.2.post1
 urllib3==1.26.6
 whitenoise==5.2.0
