--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-bootstrap4==3.0.1
 django-braces==1.14.0
 django-heroku==0.3.1
 django-model-utils==4.1.1
+django-ratings==0.3.7
 django-registration==3.1.1
 django-star-ratings==0.9.1
 django-tinymce==3.3.0
